# mfs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  testing_requirements.txt
.github/workflows/: unittest.yml
dardel/: README.md  generate_rng_key.py  run_all.sh  run_benes_bernoulli_brute_force.sh  run_benes_bernoulli_compute_errs.sh  run_benes_bernoulli_ghf_pf.sh  run_benes_bernoulli_mf.sh  run_convergence_mf.sh  run_convergence_pf.sh  run_parameter_estimation_ghf_ekf.sh  run_parameter_estimation_mf.sh  run_parameter_estimation_pf.sh  run_parameter_estimation_pf_cr.sh  run_prey_predator_cramer_rao.sh  run_prey_predator_ghf_ekf.sh  run_prey_predator_mf.sh  run_prey_predator_mf_gpu.sh  run_prey_predator_pf.sh  run_time_profile.sh  setup_env.sh
dardel/benes_bernoulli/: brute_force.py  compute_errs.py  ghf.py  mf.py  pf.py  post_processing_brute_force.py  (+2 more)
examples/: 2d_bearing_only.ipynb  README.md  benes_bernoulli.ipynb  parameter_estimation.ipynb
julia/: README.md
matlab/: README.md
mfs/: definitions.py  typings.py  utils.py
reproduce_paper_plots/: README.md  plot_benes_bernoulli_errs_and_times.py  plot_benes_bernoulli_estimation.py  plot_convergence.py  plot_parameter_estimation.py  plot_prey_predator_errs.py  plot_prey_predator_estimation.py  plot_quadrature_rules.py  plot_quadrature_rules_2d.py
tests/: test_classical_filters_smoothers.py  test_filtering.py  test_multi_dim_moments.py  test_multi_dim_quadrature.py  test_multi_indices.py  test_one_dim_moments.py  test_one_dim_quadrature.py  test_pdf_approximations.py  test_utils.py
(+32 files in other folders)
